<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RUM Mobile Demo App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_email">Please enter valid email!</string>
    <string name="error_network" translatable="false">There was a problem connecting to the server, please checked your network connection, and then try again.</string>
    <string name="error_unknown_utils">An unknown error occurred</string>
    <string name="ok">Okay</string>
    <string name="retry">Retry</string>
    <string name="exit_msg" translatable="false">Are you sure you want to exit ?</string>
    <string name="btn_login">Delayed Login</string>
    <string name="title_url_configuration">URL Configuration</string>
    <string name="hint_url">Store URL</string>
    <string name="hint_app_name">App Name</string>
    <string name="hint_token">Token</string>
    <string name="hint_environment">Environment Name</string>
    <string name="btn_submit">Submit</string>
    <string name="error_url">Please enter valid url</string>
    <string name="error_token" tools:ignore="UnusedResources">Please enter token</string>
    <string name="error_environment_name" tools:ignore="UnusedResources">Please enter environment name</string>
    <string name="error_restart_app">You need to restart your application to reflect the changes made in configuration.</string>
    <string name="https">https://</string>
    <string name="lbl_real_m">realm</string>
    <string name="real_m_us0">us0</string>
    <string name="real_m_us1" tools:ignore="Typos">us1</string>
    <string name="real_m_us2">us2</string>
    <string name="real_m_eu0">eu0</string>
    <string name="real_m_lab0">lab0</string>
    <string name="real_m_rc0">rc0</string>
    <string name="lbl_price" formatted="false" translatable="false">USD %.2f</string>
    <string name="lbl_product_description">Product Description:</string>
    <string name="lbl_quantity">Quantity</string>
    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string name="btn_add_to_cart">Add to cart</string>
    <string name="btn_empty_cart">Empty Cart</string>
    <string name="lbl_shipping_cost">Shipping Cost</string>
    <string name="lbl_total_cost">Total Cost</string>
    <string name="lbl_sku">SKU:</string>
    <string name="lbl_quantity_">Quantity:</string>
    <string name="sku_value" formatted="false" translatable="false">#%s</string>
    <string name="item_in_cart" formatted="true" translatable="false" tools:ignore="PluralsCandidate">%d item in your cart</string>
    <string name="items_in_cart" formatted="true" translatable="false" tools:ignore="PluralsCandidate">%d items in your cart</string>
    <string name="lbl_cart_empty">Your shopping cart is empty!</string>
    <string name="lbl_cart_desc">Items you add to your shopping cart will appear here.</string>
    <string name="btn_browse_products">Browse Products</string>
    <string name="alert_empty_cart_msg">Are you sure you want to empty your cart?</string>
    <string name="shipping_cost">USD 5.88</string>
    <string name="btn_crash_app">Crash App</string>
    <string name="btn_anr_app">Generate ANR</string>
    <string name="btn_generate_exception">Generate Exception</string>
    <string name="btn_freeze_app">Freeze App</string>
    <string name="btn_slow_api_response">Slow Api Response</string>
    <string name="btn_http_not_found">HTTP Not Found(4**)</string>
    <string name="btn_http_error">HTTP Error(5**)</string>
    <string name="btn_shop_web_view">Shop Web View</string>
    <string name="btn_local_web_view">Local Web View</string>
    <string name="method_not_found">4xx</string>
    <string name="http_error">5xx</string>
    <string name="slow_api">slow api</string>
    <string name="new_sales_tax">newSalesTax</string>
    <string name="lbl_check_out">Check out</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_street_address">Street Address</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="hint_country">Country</string>
    <string name="hint_state">State</string>
    <string name="hint_city">City</string>
    <string name="hint_credit_card_number">Credit Card No.</string>
    <string name="hint_month">Month</string>
    <string name="hint_year">Year</string>
    <string name="hint_cvv">CVV</string>
    <string name="btn_place_order">Place Order</string>
    <string name="error_black_validation">Please fill in this field.</string>
    <string name="error_format_format">Please match the format requested.</string>
    <string name="btn_check_out">Checkout</string>
    <string name="month_jan">January</string>
    <string name="month_feb">February</string>
    <string name="month_mar">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">October</string>
    <string name="month_nov">November</string>
    <string name="month_dec">December</string>
    <string name="order_success">Your order is complete!</string>
    <string name="hint_order_confirmation_id">Order Confirmation ID</string>
    <string name="hint_shipping_tracking_id">Shipping Tracking ID</string>
    <string name="hint_shipping_cost">Shipping Cost</string>
    <string name="hint_total_paid">Total Paid</string>
    <string name="btn_keep_browsing">Keep Browsing</string>
    <string name="shipping_cost_v">USD 0.00</string>
    <string name="total_paid_v">USD 0.00</string>
    <string name="menu_item_config_change">Change Config URL</string>
    <string name="error_bad_request_400">400 Bad Request, The request could not be understood by the server due to malformed syntax.</string>
    <string name="error_unauthorized_401">The request requires user authentication. The response MUST include a WWW-Authenticate header field.</string>
    <string name="error_forbidden_403">The server understood the request, but is refusing to fulfill it.</string>
    <string name="error_not_found_404">404 Not Found, The server has not found anything matching the Request-URI.</string>
    <string name="error_method_not_allowed_405">The method specified in the Request-Line is not allowed for the resource identified by the Request-URI.</string>
    <string name="error_request_timeout_408">408 Your request timed out. Please retry the request.</string>
    <string name="error_request_entity_too_large_413">The server is refusing to process a request because the request entity is larger than the server is willing or able to process.</string>
    <string name="error_request_uri_too_long_414">The server is refusing to service the request because the Request-URI is longer than the server is willing to interpret.</string>
    <string name="error_internal_server_error_500">500 Internal server error, The server encountered an unexpected condition which prevented it from fulfilling the request.</string>
    <string name="error_internal_server_error_504">504 Gateway timeout,The server was acting as a gateway or proxy and did not receive a timely response from the upstream server.</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="rum_instrumentation_name">SplunkRum</string>
    <string name="rum_work_flow_name">workflow.name</string>
    <string name="rum_screen_name">screen.name</string>
    <string name="rum_event_time_to_ready">Time_to_Ready</string>
    <string name="rum_event_product_list_loaded">ProductListLoaded</string>
    <string name="rum_event_product_list_loaded_msg">Product list loaded successfully.</string>
    <string name="rum_event_product_viewed" formatted="true" translatable="false">ProductDetails_%s</string>
    <string name="rum_event_attribute_name">product.name</string>
    <string name="rum_event_product_viewed_msg">Product viewed successfully.</string>
    <string name="rum_event_add_to_cart">AddToCart</string>
    <string name="rum_event_add_to_cart_msg">Product add to cart successfully.</string>
    <string name="rum_event_checkout_viewed">Checkout</string>
    <string name="rum_event_checkout_viewed_msg">Checkout screen viewed successfully.</string>
    <string name="rum_event_place_order">PlaceOrder</string>
    <string name="rum_event_place_order_msg">The user fills out all fields with valid data and proceeds to place order.</string>
    <string name="rum_event_payment">Payment_Success</string>
    <string name="rum_event_payment_msg">Payment successfully done.</string>
    <string name="rum_event_app_crash">This app crashed because it failed to parse the json response that was sent by the server.</string>
    <string name="rum_event_app_msg">Maximum available stock size is 1 and the quantity added by the user is > 1 , an exception will be generated and the user will not be able to add it to the cart.</string>
    <string name="rum_event_payment_fail">Payment_Failed</string>
    <string name="rum_event_payment_fail_msg">The provided credit card number is invalid, resulting in payment failure.</string>
    <string name="rum_event_payment_france_msg">We apologize for the inconvenience, but we cannot accept payments in France.</string>
    <string name="rum_event_app_freezer">app freezer</string>
    <string name="rum_event_sleep_mode">still in sleep mode</string>
    <string name="rum_event_crash_manually">A user wants to crash the app in order to test it</string>
    <string name="rum_event_exception_manually">A user wants to generate the exception in order to test it</string>
    <string name="rum_event_parent">dashboard_list_favorite_load_time</string>
    <string name="rum_event_child">dashboard_list_custom_load_time</string>
    <string name="api_product_detail_end_point" formatted="false" translatable="false">product/%s</string>
    <string name="url_configuration_scrollview">url_configuration_scrollview</string>
    <string name="url_configuration_store_link">url_configuration_store_link</string>
    <string name="url_configuration_submit_btn">url_configuration_submit_btn</string>
    <string name="bottom_navigation_home_icon">bottom_navigation_home_icon</string>
    <string name="bottom_navigation_cart_icon">bottom_navigation_cart_icon</string>
    <string name="bottom_navigation_events_icon">bottom_navigation_events_icon</string>
    <string name="checkout_scrollview">checkout_scrollview</string>
    <string name="checkout_cardview">checkout_cardview</string>
    <string name="checkout_email_address">checkout_email_address</string>
    <string name="checkout_postal_address">checkout_postal_address</string>
    <string name="checkout_zip_code">checkout_zip_code</string>
    <string name="checkout_country">checkout_country</string>
    <string name="checkout_state">checkout_state</string>
    <string name="checkout_city">checkout_city</string>
    <string name="checkout_cvv">checkout_cvv</string>
    <string name="checkout_credit_card_number">checkout_credit_card_number</string>
    <string name="checkout_expiry_month">checkout_expiry_month</string>
    <string name="checkout_expiry_year">checkout_expiry_year</string>
    <string name="checkout_place_order_btn">checkout_place_order_btn</string>
</resources>